# tap-mode

./: CHANGELOG.md  README.md  main.py  pyproject.toml  tap-mode.sh  tox.ini
tap_mode/: auth.py  client.py  streams.py  tap.py
tap_mode/schemas/: reports.json  spaces.json
tap_mode/tests/: __init__.py  test_core.py
