[tool.poetry]
name = "tap-mode"
version = "0.0.1"
description = "`tap-mode` is a Singer tap for Mode, built with the Meltano SDK for Singer Taps."
authors = ["Fran Lozano"]
license = "Apache 2.0"

[tool.poetry.dependencies]
python = "<3.9,>=3.6.1"
requests = "^2.25.1"
singer-sdk = "^0.3.8"

[tool.poetry.dev-dependencies]
pytest = "^6.1.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
# CLI declaration
tap-mode = 'tap_mode.tap:TapMode.cli'
